# Part of the Crubit project, under the Apache License v2.0 with LLVM
# Exceptions. See /LICENSE for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

########################################################################
# Direct Dependencies
bazel_dep(name = "rules_rust", version = "0.63.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "abseil-cpp", version = "20260107.1")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_python", version = "1.6.3")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_license", version = "1.0.0")

# We don't directly use rules_foreign_cc, but *something* does, and depends on an
# out of date version that doesn't work with newer Bazel releases. So here we force
# it to be a newer version.
bazel_dep(name = "rules_foreign_cc", version = "0.15.0")

########################################################################
# Configure Rust Toolchain
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["nightly/2026-05-11"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

########################################################################
# Configure C/C++ compiler toolchain
bazel_dep(name = "toolchains_llvm", version = "1.7.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "21.1.8",
)
use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")

########################################################################
# Set up building of Clang/LLVM from sources
llvm_ext = use_extension("//bazel:llvm_extension.bzl", "llvm_extension")
use_repo(llvm_ext, "llvm-raw", "llvm_zlib", "llvm_libxml2", "llvm_zstd")

llvm_configure = use_repo_rule("@llvm-raw//utils/bazel:configure.bzl", "llvm_configure")
llvm_configure(name = "llvm-project")

########################################################################
# Rust Crate Dependencies
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crate_index",
    manifests = [
        "//:Cargo.toml",
        "//:cargo/cc_bindings_from_rs/cc_bindings_from_rs/Cargo.toml",
        "//:cargo/cc_bindings_from_rs/cargo-cpp_api_from_rust/Cargo.toml",
        "//:cargo/rs_bindings_from_cc/rs_bindings_from_cc/Cargo.toml",
        "//support/ffi_11:Cargo.toml",
    ],
)
use_repo(crate, "crate_index")
